--- a/ProyectoWeb/frontend/src/app/rutas/ruta-manage-doctor/ruta-manage-doctor.component.html
+++ b/ProyectoWeb/frontend/src/app/rutas/ruta-manage-doctor/ruta-manage-doctor.component.html
@@ -55,7 +55,10 @@
         <a [routerLink]="['/login','principal', 'updateDoctor',doctor.user_specialties.id]" >
           <button pButton type="button" class="ui-button-success" icon="pi pi-pencil" style="margin-right: .5em;"></button>
         </a>
-        <button pButton type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="delete(doctor)" ></button>
+        <div *ngIf="_authService.deleteDoctor"  >
+          <button pButton type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="delete(doctor.user_specialties.id)" ></button>
+        </div>
+
 
       </td>
     </tr>
